creating contrainer div

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
     <!-- Section 3 (Macbook Air) -->
     <!-- End Section 3 (Macbook Air) -->
+    <div class="main-wrapper">
+        
+    </div>
 
     <!-- Section 4 (Apple watch) -->
     <!-- End Section 4 (Apple watch) -->
