--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     <!-- Section 3 (Macbook Air) -->
     <!-- End Section 3 (Macbook Air) -->
     <div class="main-wrapper">
-        
+        <div class="slider">
+            <div class="slide one">
+                <h1>First Slide</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+            </div>
+            <div class="slide">
+                <h1>First Slide</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+            </div>
+        </div>
     </div>
 
     <!-- Section 4 (Apple watch) -->
