--- a/index.html
+++ b/index.html
@@ -25,10 +25,18 @@
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
             </div>
-            <div class="slide">
+            <div class="slide two">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
             </div>
+            <div class="slide three">
+                <h1>First Slide</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="prev"> <i class="fas fa-arrow-left"></i></button>
+            <button id="next"> <i class="fas fa-arrow-right"></i></button>
         </div>
     </div>
 
