adding style for slider

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <!-- End Section 3 (Macbook Air) -->
     <div class="main-wrapper">
         <div class="slider">
-            <div class="slide one">
+            <div class="slide current">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
             </div>
-            <div class="slide two">
+            <div class="slide">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
             </div>
-            <div class="slide three">
+            <div class="slide">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
             </div>
