--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
     <div class="main-wrapper">
         <div class="slider">
             <div class="slide current">
-                <h1>First Slide</h1>
+                <div class="content">
+                    <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+                </div>
             </div>
             <div class="slide">
+               <div class="content">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+               </div>
             </div>
             <div class="slide">
+               <div class="content">
                 <h1>First Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+               </div>
             </div>
         </div>
         <div class="buttons">
