--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </div>
             <div class="slide">
                <div class="content">
-                <h1>First Slide</h1>
+                <h1>Second Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
                </div>
             </div>
             <div class="slide">
                <div class="content">
-                <h1>First Slide</h1>
+                <h1>Third Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
                </div>
             </div>
