--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                <div class="content">
                 <h1>Third Slide</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus in dicta illo nobis animi.</p>
+                <button id="buy">lan</button>
                </div>
             </div>
         </div>
