set interval time for slider

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Modal content -->
     <div class="modal-content">
-      <span class="close">&times;</span>
+      <button id="close">Close</button>
       <p>Some text in the Modal..</p>
     </div>
   
@@ -76,8 +76,6 @@
 
     <!-- Section 6 (Contact Us) -->
     <!-- End Section 6 (Contact Us) -->
-
-
     <script src="script.js"></script>
 </body>
 
