--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Section 5 (AirPods) -->
     <!-- End Section 5 (Airpods) -->
+    <div>Airpods</div>
 
     <!-- Section 6 (Contact Us) -->
     <!-- End Section 6 (Contact Us) -->
