added apple watch section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+      <!-- font awesome cdn link  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Apple E-commerce</title>
 </head>
@@ -21,6 +23,440 @@
     <!-- End Section 3 (Macbook Air) -->
 
     <!-- Section 4 (Apple watch) -->
+       
+<!-- header section starts  -->
+
+<header class="header">
+
+  <a href="#" class="logo">
+      <img src="images/logo-img.jpeg" alt="">
+  </a>
+
+  <nav class="navbar">
+      <a href="#series7">Apple watch series7</a>
+      <a href="#series6">Apple watch series6</a>
+      <a href="#series5">Apple watch series5</a>
+      <a href="#se">Apple watch SE</a>
+      <a href="#bands">Apple watch band</a>
+  </nav>
+
+  <div class="icons">
+      <div class="fas fa-search" id="search-btn"></div>
+      <div class="fas fa-shopping-cart" id="cart-btn"></div>
+      <div class="fas fa-bars" id="menu-btn"></div>
+  </div>
+
+  <div class="search-form">
+      <input type="search" id="search-box" placeholder="search here...">
+      <label for="search-box" class="fas fa-search"></label>
+  </div>
+
+  <div class="cart-items-container">
+      <div class="cart-item">
+          <span class="fas fa-times"></span>
+          <img src="images/watch7.png" alt="">
+          <div class="content">
+              <h3>Watch series 7</h3>
+              <div class="price">$450/-</div>
+          </div>
+      </div>
+      <div class="cart-item">
+          <span class="fas fa-times"></span>
+          <img src="images/watch5x.png" alt="">
+          <div class="content">
+              <h3>Watch series 5</h3>
+              <div class="price">$350/-</div>
+          </div>
+      </div>
+      <div class="cart-item">
+          <span class="fas fa-times"></span>
+          <img src="images/watch6.png" alt="">
+          <div class="content">
+              <h3>Watch series 6</h3>
+              <div class="price">$300/-</div>
+          </div>
+      </div>
+      <div class="cart-item">
+          <span class="fas fa-times"></span>
+          <img src="images/watch7.png" alt="">
+          <div class="content">
+              <h3>Watch series SE</h3>
+              <div class="price">$250/-</div>
+          </div>
+      </div>
+      <a href="#" class="btn">Buy now</a>
+  </div>
+
+</header>
+
+<!-- header section ends -->
+
+<!-- home section starts  -->
+
+<section class="home">
+
+  <!-- <div class="content">
+      <h3>Heavy on features.
+          <br>
+          Light on price.</h3>
+      <p>Save 5% on Apple Watch with a new Apple Card.</p>
+      <a href="#" class="btn">get yours now</a>
+  </div> -->
+
+</section>
+
+<!-- home section ends -->
+
+<!-- about section starts  -->
+
+<section class="about">
+
+  <h1 class="heading"> <span>Why apple watch?</span></h1>
+  <div class="row">
+
+      <div class="image">
+          <img src="images/about-image.jpeg" alt="">
+      </div>
+
+      <div class="content">
+          <h3>what is special?</h3>
+          <p>Our goal for battery life is 18 hours after an overnight charge, factoring in things like checking the time,
+              receiving notifications, using apps and doing a 60-minute workout.</p>
+          <p>Apple watches are water resistance upto 50 Meters</p>
+          <a href="#" class="btn">learn more</a>
+      </div>
+
+  </div>
+
+</section>
+
+<!-- about section ends -->
+
+<!-- menu section starts  -->
+
+<section class="menu">
+
+  <h1 class="heading"><span>Watch options</span> </h1>
+
+  <div class="box-container">
+      <div class="box">
+          <img src="images/image1.png" alt="">
+          <h3 id="series7">apple watch series 7 midnight</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image2.png" alt="">
+          <h3>apple watch series 7 blue</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image3.png" alt="">
+          <h3>apple watch series 7 graphite</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image4.png" alt="">
+          <h3>apple watch series 7 gold stainless</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image5.png" alt="">
+          <h3> apple watch series 7 silver stainless</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image6.png" alt="">
+          <h3>apple watch series 7 green</h3>
+          <div class="price">$450 <span>564</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image7.png" alt="">
+          <h3>apple watch series 6 silver</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+      <div class="box">
+          <img src="images/image8.png" alt="">
+          <h3>apple watch series 6 silver stainless</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image9.png" alt="">
+          <h3>apple watch series 6 silver</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image10.png" alt="">
+          <h3>apple watch series 6 red</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image11.png" alt="">
+          <h3>apple watch series 6 gold stainless</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image12.png" alt="">
+          <h3>apply watch series 6 rosy gold</h3>
+          <div class="price">$350 <span>454</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image13.png" alt="">
+          <h3>apple watch series 5 silver</h3>
+          <div class="price">$300 <span>350</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image14.png" alt="">
+          <h3>apple watch series SE gray</h3>
+          <div class="price">$300 <span>350</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+      <div class="box">
+          <img src="images/image15.png" alt="">
+          <h3>apple watch series SE silver</h3>
+          <div class="price">$300 <span>350</span></div>
+          <a href="#" class="btn">Quick view</a>
+      </div>
+
+  </div>
+
+</section>
+
+<!-- menu section ends -->
+
+<!-- blogs section starts  -->
+
+<section id="bands" class="blogs">
+
+  <h1 class="heading"><span>Apple watch accesories</span> </h1>
+
+  <div class="box-container">
+
+      <div class="box">
+          <div class="image">
+              <img src="images/bands.jpeg" alt="">
+          </div>
+          <div class="content">
+              <a href="#" class="title"></a>
+              <span>the current collection</span>
+              <p>These are only the new bands that are available. The entire collection is much larger.</p>
+              <a href="#" class="btn">read more</a>
+          </div>
+      </div>
+
+      <div class="box">
+          <div class="image">
+              <img src="images/bands2.jpg" alt="">
+          </div>
+          <div class="content">
+              <a href="#" class="title"></a>
+              <span>Best Apple Watch bands</span>
+              <p>Cool, colorful and stylish bands to pair with your Apple Watch Choose different designs, adjust the colors, and add complications.</p>
+              <a href="#" class="btn">read more</a>
+          </div>
+      </div>
+
+      <div class="box">
+          <div class="image">
+              <img src="images/bands3.jpg" alt="">
+          </div>
+          <div class="content">
+              <a href="#" class="title"></a>
+              <span>Customize your watch</span>
+              <p>As with any personal accessory, you might want to style it to fit your personality and aesthetic. Enter watch bands.</p>
+              <a href="#" class="btn">read more</a>
+          </div>
+      </div>
+
+  </div>
+
+</section>
+
+<!-- blogs section ends -->
+
+<div class="main-container">
+  <button id="btn-left" class="fas fa-angle-right"></button>
+  <section class="main-slider" id="slider">
+      <div class="thumbail">
+          <img src="images/band1.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series SE</P>
+              <P>PRICE: <span> from $279</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band2.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series SE</P>
+              <P>PRICE: <span> from $279</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band3.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 7</P>
+              <P>PRICE: <span> from $399</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+  
+      <div class="thumbail">
+          <img src="images/band4.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 7</P>
+              <P>PRICE: <span> from $399</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band5.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band6.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band7.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band8.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band1.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band2.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band3.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band4.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band5.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band6.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band7.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band8.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+      <div class="thumbail">
+          <img src="images/band3.png" alt="" class="imgs">
+          <div class="details">
+              <p> Apple Watch</p>
+              <P>Series 3</P>
+              <P>PRICE: <span> from $199</span> </P>
+              <div class="btn btn-primary">ADD TO CART</div>
+          </div>
+      </div>
+  </section>
+  <button id="btn-right" class="btn-arrow  fas fa-angle-left"></button>
+</div>
+  </section>
+  <button id="btn-right" class="btn-arrow  fas fa-angle-left"></button>
+</div>
+
     <!-- End Section 4 (Apple watch) -->
 
     <!-- Section 5 (AirPods) -->
