chaing container&gring style

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     <div class="modal-content">
       
         <section class="product-mac">
-            <div class="container">
+            <div class="maccontainer">
               <h2><i class="fab fa-apple logo"></i></h2>
-              <div class="grid">
+              <div class="maingrid">
                 <div class="grid-product">
                   <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/macbook-air-space-gray-select-201810?wid=452&hei=420&fmt=jpeg&qlt=95&.v=1633027804000">
                   <div class="grid-detail">
