--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
       <div class="box">
           <img src="images/image8.png" alt="">
-          <h3>apple watch series 6 silver stainless</h3>
+          <h3 id="series6">apple watch series 6 silver stainless</h3>
           <div class="price">$350 <span>454</span></div>
           <a href="#" class="btn">Quick view</a>
       </div>
@@ -422,13 +422,13 @@
       </div>
       <div class="box">
           <img src="images/image13.png" alt="">
-          <h3>apple watch series 5 silver</h3>
+          <h3 id="series5">apple watch series 5 silver</h3>
           <div class="price">$300 <span>350</span></div>
           <a href="#" class="btn">Quick view</a>
       </div>
       <div class="box">
           <img src="images/image14.png" alt="">
-          <h3>apple watch series SE gray</h3>
+          <h3 id="se">apple watch series SE gray</h3>
           <div class="price">$300 <span>350</span></div>
           <a href="#" class="btn">Quick view</a>
       </div>
