adding footer logo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="content">
                     <h1>MacBook Air</h1>
                 <p>Our thinnest, lightest notebook, completely transformed by the Apple M1 chip. CPU speeds up to 3.5x faster. GPU speeds up to 5x faster. Our most advanced Neural Engine for up to 9x faster machine learning. The longest battery life ever in a MacBook Air.</p>
-                <button id="buy"  class="btn"><i class="fas fa-shopping-cart"></i></button>
+                <button id="buy"  onclick="openModal()"><i class="fas fa-shopping-cart"></i></button>
                 <button id="adToCard"><i class="fas fa-shopping-bag"></i></button>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 <div class="content">
                  <h1>MacBook Pro</h1>
                  <p>The Apple M1 chip gives the 13‑inch MacBook Pro speed and power beyond belief. With up to 2.8x CPU performance. Up to 5x the graphics speed. Our most advanced Neural Engine for up to 11x faster machine learning. And up to 20 hours of battery life so you can go all day.</p>
-                 <button id="buy"  class="btn"><i class="fas fa-shopping-cart"></i></button>
+                 <button id="buy"  onclick="openModal()"><i class="fas fa-shopping-cart"></i></button>
                 <button id="adToCard"><i class="fas fa-shopping-bag"></i></button>
                 </div>
              </div>
@@ -142,7 +142,7 @@
                <div class="content">
                 <h1>Supercharged for pros.</h1>
                 <p>The most powerful MacBook Pro ever is here. With the blazing-fast M1 Pro or M1 Max chip — the first Apple silicon designed for pros — you get groundbreaking performance and amazing battery life. Add to that a stunning Liquid Retina XDR display, the best camera and audio ever in a Mac notebook, and all the ports you need. The first notebook of its kind, this MacBook Pro is a beast.</p>
-                <button id="buy"  class="btn"><i class="fas fa-shopping-cart"></i></button>
+                <button id="buy"  onclick="openModal()"><i class="fas fa-shopping-cart"></i></button>
                 <button id="adToCard"><i class="fas fa-shopping-bag"></i></button>
                </div>
             </div>
