--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <div>Airpods</div>
 
     <!-- Section 6 (Contact Us) -->
-    <div class="container">  
+    <div class="Footercontainer">  
       <div class="footer">        
         <a href="https://www.apple.com/ru/iphone/"><img class="img" target="_blank"  src="images//footer/iphone.png"></a>   
         <a href="#"><img class="img" target="_blank" src="/images/footer/macbook.png"></a>   
@@ -699,7 +699,7 @@
       </div> 
     </div>
     
-    <div class="main-container" id="myModal">
+    <div class="main-container" id="myModal1">
       <div class="main-container-inner">
         <div class="main-contact">
           <div class="box1">
