--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<section class="iphone">
 			<div class="iphone-container">
 				<div class="iphone-header">
-					<h1>Выберите свой iPhone</h1>
-					<p>Сравните все модели iPhone</p>
+					<h1>Choose your Phone</h1>
+					<p>Compare iPhone Models</p>
 				</div>
 				<div class="iphone-wrapper">
 					<div class="product-iphone">
@@ -120,7 +120,7 @@
 
     <!-- Section 3 (Macbook Air) -->
     <!-- End Section 3 (Macbook Air) -->
-    <div class="main-wrapper">
+    <div class="main-wrapper" id="laptop">
         <div class="slider">
             <div class="slide current">
                 <div class="content">
@@ -310,7 +310,7 @@
 
 <!-- about section starts  -->
 
-<section class="about">
+<section class="about" id="applewatch">
 
   <h1 class="heading"> <span>Why apple watch?</span></h1>
   <div class="row">
@@ -661,7 +661,7 @@
     <!-- End Section 4 (Apple watch) -->
 
     <!-- Section 5 (AirPods) -->
-	<section class="section-airpods">
+	<section class="section-airpods" id="airpods">
 		<div class="parent">
 			<h1>AirPods</h1>
 			<div class="box bg-white">
@@ -690,9 +690,9 @@
     <div class="Footercontainer">  
       <div class="footer">        
         <a href="https://www.apple.com/ru/iphone/"><img class="img" target="_blank"  src="images//footer/iphone.png"></a>   
-        <a href="#"><img class="img" target="_blank" src="/images/footer/macbook.png"></a>   
-        <a href="#"><img class="img" target="_blank" src="/images/footer/apple-watch.png"></a>   
-        <a href="#"><img class="img" target="_blank" src="/images/footer/airpods.png"></a>  
+        <a href="#laptop"><img class="img"  src="/images/footer/macbook.png"></a>   
+        <a href="#applewatch"><img class="img"  src="/images/footer/apple-watch.png"></a>   
+        <a href="#airpods"><img class="img" src="/images/footer/airpods.png"></a>  
         <a href="#"><img class="img" target="_blank" src="/images/footer/apple-logo.png"></a>
         <a href="#"><img class="img" target="_blank" src="/images/footer/contact-us.png" onclick="openModal()"></a> 
         <p>Copyright 2021 apple inc. All rights reserved</p>
@@ -705,7 +705,6 @@
           <div class="box1">
             <h1>Contact</h1>
             <div class="line">
-              <hr>
             </div>					 
           </div>
         </div>
