--- a/12ProMax.html
+++ b/12ProMax.html
@@ -12,7 +12,7 @@
 
 <body>
  <section class="ichoose">
-	 <div class="container">
+	 <div class="iphone-container">
 		 <div class="ichoose__inner">
 			 <div class="ichoose__color-click">
 					<div class="ichoose__img">
