--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 					<img src="https://lookagain.scene7.com/is/image/OttoUK/553w/airpods-pro-by-apple~39X306FRSP.jpg" alt="">
 				</div>
 				<a href="/buy-section project/index.html">
-					<button type="button" class="btn btn-info">Buy1</button>
+					<button type="button" class="btn btn-info">Buy</button>
 				</a>
 			</div>
 			<div class="box bg-blue">
